--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-		<link rel="icon" href="<%= BASE_URL %>favicon.png" />
-		<title><%= htmlWebpackPlugin.options.title %></title>
+		<title>Vue To-Do App</title>
+		<link rel="icon" href="/favicon.png" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;0,900&display=swap"
@@ -15,12 +15,9 @@
 	</head>
 	<body>
 		<noscript>
-			<strong
-				>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript
-				enabled. Please enable it to continue.</strong
-			>
+			<strong>We're sorry but Vue To-Do App doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 		</noscript>
 		<div id="app" class="site"></div>
-		<!-- built files will be auto injected -->
+		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
